# ai-docs-assistant-api

./: .env.example  README.md  compose.yaml  pyproject.toml
app/: main.py
app/api/: deps.py  routes.py
app/core/: config.py  logging.py
app/db/: base.py  models.py  repositories.py  utils.py
app/ingestion/: parsers.py  tasks.py  worker.py
app/rag/: chunker.py  embeddings.py  pipeline.py  prompt.py  retriever.py
app/schemas/: chat.py  common.py  documents.py
docker/api/: Dockerfile
docker/worker/: Dockerfile
