[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-docs-assistant"
version = "0.1.0"
description = "FastAPI + LangChain + Postgres(pgvector) RAG service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "SQLAlchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "pgvector>=0.3.3",
  "python-multipart>=0.0.9",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "openai>=1.50.0",
  "tenacity>=9.0.0",
  "pypdf>=5.0.0",
  "celery>=5.4.0",
  "redis>=5.0.8",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
